fix de error al procesar listas, error al generar transaccion id